# libcaravel

./: CMakeLists.txt  FindCaravelLib.cmake.in  libcaravel.kdev4  libcaravel.pc.in
.kdev4/: libcaravel.kdev4
src/: CaravelContext.cpp  CaravelDBContext.cpp  CaravelDBContext.h  CaravelDownloader.cpp  CaravelDownloader.h  CaravelReader.cpp  CaravelReader.h  CaravelWriter.h
src/caravelscript/: backend.cpp  backend.h  main.cpp
src/core/: Caravel.h  CaravelAuthor.cpp  CaravelAuthor.h  CaravelContext.cpp  CaravelContext.h  CaravelDBContext.cpp  CaravelDBContext.h  CaravelDownloader.cpp  CaravelDownloader.h  CaravelLogger.cpp  CaravelLogger.h  CaravelPackageChecker.cpp  CaravelPackageChecker.hpp  CaravelReader.cpp  CaravelReader.h  CaravelRepository.cpp  CaravelRepository.h  CaravelSession.cpp  CaravelSession.h  CaravelTypeLoader.cpp  CaravelTypeLoader.hpp  CaravelTypePlugin.cpp  CaravelTypePlugin.hpp  CaravelUtils.cpp  CaravelUtils.h  CaravelWriter.cpp  CaravelWriter.h
src/core/plugins/: .BinariesType.h.kate-swp  AssetsType.cpp  BinariesType.cpp  ConfigType.cpp
src/core/repository/: CaravelRepoManager.cpp  CaravelRepoManager.h  CaravelRepository.cpp  CaravelRepository.h
src/pk/: caravel-backend.cpp  caravel-backend.h  pk-backend-job.h  pk-backend.h
stage/: CaravelFS.cpp  CaravelFS.hpp
